--- a/client/.gitignore
+++ b/client/.gitignore
@@ -22,3 +22,46 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+############################################
+# ⚙️ Ortam dosyaları
+############################################
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*
+*.pem
+*.key
+*.crt
+*.p12
+*.csr
+
+############################################
+# ⚛️ Frontend (client)
+############################################
+node_modules/
+build/
+dist/
+.env
+.env.*
+.cache/
+coverage/
+.vite/
+.next/
+.turbo/
+
+############################################
+# 🐘 PostgreSQL / Docker
+############################################
+*.sql
+*.dump
+*.backup
+*.tar
+pgdata/
+data/
+volumes/
+.docker/
+docker-compose.override.yml
+docker-logs/
